[gd_scene load_steps=11 format=3 uid="uid://ba5rv1kxqm8s1"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_e7bqu"]
[ext_resource type="Texture2D" uid="uid://hetd05f5acbc" path="res://textures/misc/adv.png" id="3_2dj5j"]
[ext_resource type="FontFile" uid="uid://dis7ankh4dwvm" path="res://textures/misc/PixelFont.ttf" id="3_u1vhr"]
[ext_resource type="Texture2D" uid="uid://kt2nooawry6n" path="res://textures/misc/adv_hover.png" id="4_p1la8"]
[ext_resource type="Texture2D" uid="uid://dsrg27ye23b3h" path="res://textures/misc/sec.png" id="5_y42vq"]
[ext_resource type="Texture2D" uid="uid://cmx0vw46iuwbp" path="res://textures/misc/se—Å_hover.png" id="6_y1047"]
[ext_resource type="Texture2D" uid="uid://d2lhghe1gex67" path="res://textures/misc/set.png" id="7_gpjnc"]
[ext_resource type="Texture2D" uid="uid://dppngfvpe740g" path="res://textures/misc/set_hover.png" id="8_t2pls"]
[ext_resource type="Texture2D" uid="uid://dbod33gxu01pv" path="res://textures/misc/exit.png" id="9_nhxbc"]
[ext_resource type="Texture2D" uid="uid://v6helc3jyyc2" path="res://textures/misc/exit_hover.png" id="10_aewv0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e7bqu")

[node name="MENU_BGM" type="AudioStreamPlayer" parent="."]
volume_db = -25.0

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="CenteringMain" type="Control" parent="."]
anchors_preset = 0
offset_left = 137.0
offset_top = 162.0
offset_right = 387.0
offset_bottom = 332.0

[node name="MainButtons" type="VBoxContainer" parent="CenteringMain"]
layout_mode = 2
anchor_left = -0.228
anchor_top = -1.296
anchor_right = -0.228
anchor_bottom = -1.296
offset_left = 57.0
offset_top = 220.32
offset_right = 307.0
offset_bottom = 390.32
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StartGame" type="TextureButton" parent="CenteringMain/MainButtons"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
tooltip_text = "
"
texture_normal = ExtResource("3_2dj5j")
texture_pressed = ExtResource("3_2dj5j")
texture_hover = ExtResource("4_p1la8")
ignore_texture_size = true

[node name="Settings" type="TextureButton" parent="CenteringMain/MainButtons"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
tooltip_text = "
"
texture_normal = ExtResource("7_gpjnc")
texture_pressed = ExtResource("7_gpjnc")
texture_hover = ExtResource("8_t2pls")
ignore_texture_size = true

[node name="Exit" type="TextureButton" parent="CenteringMain/MainButtons"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
tooltip_text = "
"
texture_normal = ExtResource("9_nhxbc")
texture_pressed = ExtResource("9_nhxbc")
texture_hover = ExtResource("10_aewv0")
ignore_texture_size = true

[node name="Secrets" type="TextureButton" parent="CenteringMain/MainButtons"]
visible = false
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
tooltip_text = "
"
texture_normal = ExtResource("5_y42vq")
texture_pressed = ExtResource("5_y42vq")
texture_hover = ExtResource("6_y1047")
ignore_texture_size = true

[node name="Title" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 70.0
offset_right = 473.0
offset_bottom = 144.0

[node name="Elemental poker" type="Label" parent="Title"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_u1vhr")
theme_override_font_sizes/font_size = 38
text = "ELEMENTAL POKER
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Battle" type="Label" parent="Title"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("3_u1vhr")
theme_override_font_sizes/font_size = 30
text = "BATTLE OF ACES"
horizontal_alignment = 1
vertical_alignment = 1
